# zephyr-integration

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  flake.nix  module.yml  west.yml
zephyr/: module.yml
